03.PRD/gateway/yaml/00.common/03.gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: sg
  namespace: skix-gateway
spec:
  gatewayClassName: sg
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      allowedRoutes:
        namespaces:
          from: All
  #addresses:
  #  - type: IPAddress
  #    value: "20.249.26.207" # 여기에 미리 예약한 공용 IP를 입력합니다.
